--- a/manifests/kafka-networkpolicies.yaml
+++ b/manifests/kafka-networkpolicies.yaml
@@ -11,12 +11,27 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: allow-prometheus
+  name: allow-prometheus-kafka
   namespace: kafka
 spec:
   podSelector:
     matchLabels:
-      strimzi.io/cluster: kcluster
+      strimzi.io/name: kcluster-kafka
+  ingress:
+  - from:
+    - podSelector:
+        matchLabels:
+          app: prometheus
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: allow-prometheus-zookeeper
+  namespace: kafka
+spec:
+  podSelector:
+    matchLabels:
+      strimzi.io/name: kcluster-zookeeper
   ingress:
   - from:
     - podSelector:
