Use inline method.

--- a/component.yaml
+++ b/component.yaml
@@ -3,9 +3,15 @@ generator: "static"
 path: "./manifests"
 subcomponents:
   - name: "strimzi-kafka-operator"
-    source: "components/strimzi-kafka-operator"
+    type: "helm"
+    path: "strimzi-kafka-operator"
+    method: "helm"
+    source: "http://strimzi.io/charts/"
   - name: "confluent-schema-registry"
-    source: "components/confluent-schema-registry"
+    type: "helm"
+    source: "https://kubernetes-charts-incubator.storage.googleapis.com/"
+    method: "helm"
+    path: "schema-registry"
   - name: "prometheus-grafana"
     source: "https://github.com/microsoft/fabrikate-definitions.git"
     path: "definitions/fabrikate-prometheus-grafana"
