--- a/test/kafka-topics.yaml
+++ b/test/kafka-topics.yaml
@@ -25,3 +25,17 @@ spec:
   config:
     retention.ms: 7200000
     segment.bytes: 1073741824
+---
+apiVersion: kafka.strimzi.io/v1beta1
+kind: KafkaTopic
+metadata:
+  name: test-replication
+  namespace: kafka
+  labels:
+    strimzi.io/cluster: kcluster
+spec:
+  partitions: 6
+  replicas: 3
+  config:
+    retention.ms: 7200000
+    segment.bytes: 1073741824
