--- a/manifests/kafka-connect.yaml
+++ b/manifests/kafka-connect.yaml
@@ -19,3 +19,11 @@ spec:
     trustedCertificates:
       - secretName: kcluster-cluster-ca-cert
         certificate: ca.crt
+  metrics:
+    lowercaseOutputName: true
+    lowercaseOutputLabelNames: true
+    rules:
+    - pattern : "kafka.connect<type=connect-worker-metrics>([^:]+):"
+      name: "kafka_connect_connect_worker_metrics_$1"
+    - pattern : "kafka.connect<type=connect-metrics, client-id=([^:]+)><>([^:]+)"
+      name: "kafka_connect_connect_metrics_$1_$2"
